# rattler-emscripten-wasm32

./: .gitignore  Cargo.toml  check_build.sh  pixi.toml  pyproject.toml  recipe.yml
docs/: conf.py  environment.template.yml  environment.yml  index.rst  prepare_environment.py
python/pyemscripten/: __init__.py
python/tests/: test_all.py
src/: lib.rs
workdir/: main.py
