[build-system]
requires = ["maturin>=1.12,<2.0"]
build-backend = "maturin"

[project]
name = "pyemscripten"
license = "Apache-2.0"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
]
dynamic = ["version"]

[project.optional-dependencies]
tests = [
    "pytest",
]

[tool.maturin]
python-source = "python"
binding = "pyo3"
features = ["pyo3/extension-module"]
